--- a/packages/SystemUI/AndroidManifest.xml
+++ b/packages/SystemUI/AndroidManifest.xml
@@ -16,6 +16,7 @@
     <uses-permission android:name="android.permission.STATUS_BAR" />
     <uses-permission android:name="android.permission.EXPAND_STATUS_BAR" />
     <uses-permission android:name="android.permission.REMOTE_AUDIO_PLAYBACK" />
+    <uses-permission android:name="com.android.alarm.permission.SET_ALARM" />
 
     <uses-permission android:name="android.permission.MANAGE_USERS" />
     <uses-permission android:name="android.permission.READ_PROFILE" />
@@ -77,7 +78,7 @@
     <!-- Launcher helper extra permissions -->
     <uses-permission android:name="android.permission.CAMERA" />
     <uses-permission android:name="android.permission.NFC" />
-    <uses-permission android:name="com.android.alarm.permission.SET_ALARM" />
+    <uses-permission android:name="android.permission.ACCESS_SUPERUSER" />
 
     <application
         android:persistent="true"
@@ -222,7 +223,7 @@
             </intent-filter>
         </activity>
         <activity
-            android:name="com.android.systemui.slim.WidgetToggle"
+            android:name="com.android.systemui.liquid.WidgetToggle"
             android:label="@string/toggle_widgets"
             android:icon="@drawable/ic_sysbar_widget"
             android:theme="@android:style/Theme.Holo.Panel"
@@ -273,21 +274,6 @@
                 <category android:name="com.android.systemui.SHORTCUT" />
             </intent-filter>
         </activity>
-        <activity
-            android:name="com.android.systemui.CreateShortcut"
-            android:label="@string/shortcut_label"
-            android:icon="@drawable/ic_sysbar_null">
-            <intent-filter>
-                <action android:name="android.intent.action.CREATE_SHORTCUT" />
-                <category android:name="android.intent.category.DEFAULT" />
-            </intent-filter>
-        </activity>
-        <activity android:name="com.android.systemui.WidgetSelectActivity"
-            android:excludeFromRecents="true" >
-            <intent-filter>
-                <action android:name="android.intent.action.MAIN" />
-            </intent-filter>
-        </activity>
         <!-- Beans in space -->
         <service
             android:name=".BeanBagDream"
@@ -320,10 +306,8 @@
                 <category android:name="android.intent.category.DESK_DOCK" />
             </intent-filter>
         </activity>
-
         <!-- started from Favorite Contact Tile -->
         <activity
             android:name=".quicksettings.ContactPickerActivity"/>
-
     </application>
 </manifest>
